= Changes

== 2013-04-14 (0.0.14)
* Added the cs_base.rb to merge all common options.
* Added the cs_base_list.rb to merge all common options and functions for the list commands.
* Added the option: <tt>-P</tt> / <tt>--cloudstack-project</tt> to the following commands: <tt>account list</tt>, <tt>firewallrule list</tt>, <tt>hosts</tt>,
  <tt>iso list</tt>, <tt>network list</tt>, <tt>router list</tt>, <tt>server list</tt>, <tt>template list</tt>, <tt>volume list</tt>

* Added subcommands: <tt>account list</tt>, <tt>cluster list</tt>, <tt>config list</tt>, <tt>disk create</tt>,
  <tt>disk list</tt>, <tt>domain list</tt>,<tt>firewallrule list</tt>, <tt>host list</tt>,
  <tt>iso list</tt>, <tt>ostype list</tt>, <tt>oscategory list</tt>, <tt>pod list</tt>, <tt>project list</tt>,
  <tt>service create</tt>, <tt>template create</tt>, <tt>template extract</tt>, <tt>template register</tt>, <tt>router list</tt>, <tt>user list</tt>, <tt>volume list</tt>

* Updated subcommands: <tt>hosts</tt>, <tt>network list</tt>, <tt>server list</tt>, <tt>service list</tt>,
  <tt>template list</tt>, <tt>zone list</tt>

* Added option: <tt>--filter</tt> to all list commands. This filters your output on the fields that you specify.
  Filter can be a string <tt>'name'</tt> or regexp <tt>'/name/i'</tt>. Example: <tt>--filter "instancename:/i-xxx/i,accountname:jenkins"</tt>
  Additional filters can be added by separating them using a comma ',' 
    NOTE: --filter is done client side, filtering by --name or --keyword is faster and is done server side.

* Added option: <tt>--fields</tt> to all list commands. Here you specify the fields that you want to display in your output.
  Default outputs will be shown if no fields are defined. Example: <tt>--fields "name, instancename, domain"</tt>

* Added option: <tt>--noheader</tt> to all list commands.
  This will remove the header from the output.
